All layout.css to all html pages

--- a/src/main/resources/templates/hello-world.html
+++ b/src/main/resources/templates/hello-world.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>hello world</title>
+    <link rel="stylesheet" href="css/layout.css">
 </head>
 <body>
 hello world.
