--- a/src/main/resources/templates/albums.html
+++ b/src/main/resources/templates/albums.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Albums</title>
+    <link rel="stylesheet" href="css/layout.css">
 </head>
 <body>
 <h1> Albums :)</h1>
