Adds ability to save and view albums in the database.

--- a/src/main/resources/templates/albums.html
+++ b/src/main/resources/templates/albums.html
@@ -7,7 +7,10 @@
 </head>
 <body>
 <h1> Albums :)</h1>
+
+<h2>Add and Album here</h2>
 <table>
+    <a href="/addAlbum">Add an Album</a>
     <tr>
         <th>title</th>
         <th>artist</th>
