Forces user to use ints when adding album

--- a/src/main/resources/templates/addAlbum.html
+++ b/src/main/resources/templates/addAlbum.html
@@ -14,9 +14,9 @@
         <label for="artist">Artist</label>
         <input type="text" name="artist">
         <label for="songCount">Number of Songs</label>
-        <input type="text" name="songCount">
+        <input type="number" name="songCount">
         <label for="length">Album length in seconds</label>
-        <input type="text" name="length">
+        <input type="number" name="length">
         <label for="imgUrl">The ImgURL for the album</label>
         <input type="text" name="imgUrl">
         <input type="submit" value="Add album">
