Adds Header to files.

--- a/src/main/resources/templates/albums.html
+++ b/src/main/resources/templates/albums.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Albums</title>
+    <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/layout.css">
 </head>
 <body>
-<h1> Albums :)</h1>
+<header th:replace="fragments/header.html :: header"></header>
+
+<h1>Albums</h1>
 
 <h2>Add and Album here</h2>
 <table>
