--- a/src/main/resources/templates/albumDetail.html
+++ b/src/main/resources/templates/albumDetail.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>songr</title>
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/layout.css">
 </head>
 <body>
 </body>
