--- a/src/main/resources/templates/capitalize.html
+++ b/src/main/resources/templates/capitalize.html
@@ -6,9 +6,10 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>capitalize</title>
+    <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/layout.css">
 </head>
 <body>
-    <p th:text="${string}">WHAT THEY DO</p>
+    <p th:text="${string}"></p>
 </body>
 </html>
