--- a/src/main/resources/templates/landing.html
+++ b/src/main/resources/templates/landing.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/layout.css">
 </head>
 <body>
-<header th:insert="fragments/header.html :: header"> </header>
+<header th:replace="fragments/header.html :: header"> </header>
 <h1>Welcome to Songr!</h1>
 <p> We are a cool app where you van create fun playlists and such!</p>
 </body>
